@@ -40,7 +40,7 @@ void
 _initEmu(void)
 {
   /* load and configure the libgpsim_modules module */
-  _asm
+  __asm
     ;; Set frequency to 20MHz
     .direct "e", ".frequency=20e6"
     
@@ -59,7 +59,7 @@ _initEmu(void)
 
     ;; Display the received character on terminal
     .direct "e", "U1.console = true"
-  _endasm;
+  __endasm;
 
   /* USART initialization */
   PORTC |= 0x40;     // Set TX pin to 1
@@ -101,3 +101,4 @@ _exitEmu(void)
    .direct "a", "\"\""
   __endasm;
 }
+
